Fix align in react

--- a/packages/react/src/styles.scss
+++ b/packages/react/src/styles.scss
@@ -335,6 +335,11 @@ body {
         padding-left: 0;
       }
     }
+    .status-editor-field {
+      .status-contact {
+        align-items: center;
+      }
+    }
   }
 
   .cards:not(.compact) {
